// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`<Search/> @renders in default state 1`] = `
<div
  className="Search"
>
  <input
    className="Search-input"
    onChange={[Function]}
    placeholder="search product"
    type="search"
    value="fake term"
  />
</div>
`;

exports[`<Search/> @renders with empty searchTerm 1`] = `
<div
  className="Search"
>
  <input
    className="Search-input"
    onChange={[Function]}
    placeholder="search product"
    type="search"
    value=""
  />
</div>
`;
